--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,8 @@ dependencies {
 
     //An image loading library for Android backed by Kotlin Coroutines
     implementation "io.coil-kt:coil-compose:2.0.0"
+
+    //Accompanist is a labs like environment for new Compose APIs. We use it to help fill known gaps in the Compose toolkit, experiment with new APIs and to gather insight into the development experience of developing a Compose library.
+    implementation("com.google.accompanist:accompanist-pager:0.19.0")
+    implementation("com.google.accompanist:accompanist-pager-indicators:0.19.0")
 }
